# routes/api.php
@@ -11,11 +11,13 @@ Route::domain('{subdomain}.' . $host)->group(function () {
     // Add your school-specific routes here
 });
 
+use App\Http\Controllers\Api\V1\SchoolController;
+
 Route::post('/register-school', [SchoolRegistrationController::class, 'register']);
 
 Route::get('/migrate', [\App\Http\Controllers\MigrateController::class, 'migrate']);
 
-Route::prefix('school-admin')->group(function () {
-    Route::post('/login', [App\Http\Controllers\Api\SchoolAdmin\AuthController::class, 'login']);
-    Route::middleware('auth:sanctum')->post('/logout', [App\Http\Controllers\Api\SchoolAdmin\AuthController::class, 'logout']);
+Route::prefix('v1')->middleware('auth:sanctum')->group(function () {
+    Route::put('/school', [SchoolController::class, 'updateSchoolProfile']);
+    Route::put('/user', [SchoolController::class, 'updatePersonalProfile']);
 });
