# storage/api-docs/api-docs.json
@@ -5,11 +5,6 @@
         "description": "API for managing school data",
         "version": "1.0.0"
     },
-    "servers": [
-        {
-            "url": "http://127.0.0.1:8000/api"
-        }
-    ],
     "paths": {
         "/school-admin/login": {
             "post": {
@@ -103,6 +98,106 @@
                 "security": [
                     {
                         "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/school": {
+            "put": {
+                "tags": [
+                    "school-v1.0"
+                ],
+                "summary": "Update school profile",
+                "operationId": "1602f246e0f93bb4ded0cfd660dbaadc",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "address": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    },
+                                    "phone": {
+                                        "type": "string"
+                                    },
+                                    "logo_url": {
+                                        "type": "string"
+                                    },
+                                    "established_at": {
+                                        "type": "string",
+                                        "format": "date"
+                                    },
+                                    "owner_name": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "School profile updated successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/user": {
+            "put": {
+                "tags": [
+                    "school-v1.0"
+                ],
+                "summary": "Update user profile",
+                "operationId": "d8256e2daf6b738069a8734aeefcf400",
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "email": {
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "User profile updated successfully"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "422": {
+                        "description": "Validation error"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
                     }
                 ]
             }
@@ -283,6 +378,10 @@
         {
             "name": "School Admin",
             "description": "School Admin"
+        },
+        {
+            "name": "school-v1.0",
+            "description": "school-v1.0"
         },
         {
             "name": "School",
